--- a/codes_output_analysis/Output-Analysis-BERT-Search.ipynb
+++ b/codes_output_analysis/Output-Analysis-BERT-Search.ipynb
@@ -288,7 +288,7 @@
    ],
    "source": [
     "is_lora = True\n",
-    "finetuned_model_x = f\"MPNet_contriplet_removal_50_margin_40_epoch_4\"\n",
+    "finetuned_model_x = f\""vahidthegreat/StanceAware-SBERT"\"\n",
     "device='cuda'\n",
     "\n",
     "models_dir = 'Models/'\n",
