--- a/codes_output_analysis/Output-Analysis-Charts.ipynb
+++ b/codes_output_analysis/Output-Analysis-Charts.ipynb
@@ -435,7 +435,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "model name: MPNet_contriplet_removal_50_margin_40_epoch_4\n",
+      "model name: vahidthegreat/StanceAware-SBERT\n",
       "0.4387258129444429\n"
      ]
     },
@@ -482,7 +482,7 @@
     "    \n",
     "    margin_i = int(margin_i*100)\n",
     "\n",
-    "    finetuned_model_i = f'MPNet_{siamese_type}_removal_{removal}_margin_{margin_i}_epoch_{epoch}'\n",
+    "    finetuned_model_i = f'vahidthegreat/StanceAware-SBERT'\n",
     "\n",
     "    sentence_pairs_test_df[f'embeddings_i_{finetuned_model_i}'] = batch_and_encode(df_sentences_col=sentence_pairs_test_df['sentence_i'],finetuned_model_x = finetuned_model_i,is_lora=is_lora)\n",
     "    sentence_pairs_test_df[f'embeddings_j_{finetuned_model_i}'] = batch_and_encode(df_sentences_col=sentence_pairs_test_df['sentence_j'],finetuned_model_x = finetuned_model_i,is_lora=is_lora)\n",
