--- a/codes_output_analysis/Output-Analysis-Charts.ipynb
+++ b/codes_output_analysis/Output-Analysis-Charts.ipynb
@@ -130,8 +130,7 @@
     "        if is_lora == False:\n",
     "            model.load_state_dict(torch.load('Models/'+finetuned_model_x+'.pt'))\n",
     "        if is_lora == True:\n",
-    "            model = PeftModel.from_pretrained(model, models_dir+finetuned_model_x)\n",
-    "            model = model.merge_and_unload()\n",
+    "            model.apply_lora_weights(\"vahidthegreat/StanceAware-SBERT\")\n",
     "\n",
     "    # Move the model to the appropriate device (CPU or GPU)\n",
     "    device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
